<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/bill"
        android:icon="@drawable/ic_local_printshop_black_24dp"
        android:title="@string/print_bill"
        app:showAsAction="always"/>

    <!--<item android:id="@+id/add"
        android:icon="@drawable/addbutton32"
        android:title="@string/add_masters"
        app:showAsAction="never"/>-->

    <item android:id="@+id/settings"
        android:icon="@drawable/settings64"
        android:title="@string/settings"
        app:showAsAction="always"/>

    <item android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom"/>

</menu>
