<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddProductMasterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/tabpadding5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/textViewMob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/prev_name" />

            <TextView
                android:id="@+id/tv_perv_tax_name"
                style="@style/textViewMob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/cat1" />

            <EditText
                android:id="@+id/ed_cat1"
                style="@style/textViewMob"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/enter_cat1_name"
                android:inputType="textNoSuggestions|textCapWords"
                android:maxLines="1"
                android:padding="2dp"
                android:singleLine="true"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textViewMob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/tax_name" />

            <EditText
                android:id="@+id/ed_new_tax_name"
                style="@style/textViewMob"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mob_ED_size"
                android:layout_weight="0.2"
                android:hint="@string/enter_tax_name"
                android:inputType="textNoSuggestions|textCapWords"
                android:maxLines="1"
                android:padding="2dp"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textViewMob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/rate" />

            <EditText
                android:id="@+id/ed_ssp"
                style="@style/textViewMob"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mob_ED_size"
                android:layout_weight="0.2"
                android:hint="@string/enter_rate"
                android:inputType="number|numberDecimal"
                android:maxLines="1"
                android:padding="2dp"
                android:singleLine="true" />
        </LinearLayout>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTintMode="multiply"
            android:capitalize="sentences"
            android:checked="true"
            android:switchTextAppearance="@android:style/TextAppearance.Medium"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/maroon"
            android:textOff="INACTIVE"
            android:textOn="ACTIVE"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_add"
            style="@style/btnStyleMobW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:padding="2dp"
            android:text="@string/add" />

    </LinearLayout>

    <TextView
        style="@style/footerstyleMob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
