<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line_bottom_draw"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:id="@+id/order_item_name"
            style="@style/textViewMobDG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/item" />

        <Button
            android:id="@+id/remove"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/remove_btn_draw"
            android:text="-"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/order_qty"
            style="@style/textViewMobDG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="right"
            android:text="@string/qty" />

        <TextView
            android:id="@+id/order_rate"
            style="@style/textViewMobDG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="right"
            android:text="@string/rate" />

        <TextView
            android:id="@+id/order_amount"
            style="@style/textViewMobDG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="right"
            android:text="@string/amount" />
    </LinearLayout>
</LinearLayout>