<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddTableMasterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                style="@style/textViewMob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enter_number_of_tables" />

            <EditText
                android:id="@+id/ed_table_size"
                style="@style/textViewMob"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tab_ED_size"
                android:drawableLeft="@drawable/ic_table_icon_black"
                android:gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:padding="2dp"
                android:singleLine="true" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save"
                android:textColor="@color/white"
                android:visibility="visible"
                app:backgroundTint="@color/maroon" />

            <!--<Button
                android:id="@+id/btn_save"
                style="@style/btnStyleMobW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:text="@string/save" />-->

            <LinearLayout
                android:id="@+id/count_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/textViewMob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/total_number_of_tables_you_have" />

                <TextView
                    android:id="@+id/tv_count"
                    style="@style/textViewMob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/count" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        style="@style/footerstyleMob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
