<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".bluetooth_printer.SearchNewDevice">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                style="@style/textViewMobW"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/btn_draw"
                android:gravity="left|center"
                android:text="@string/paired_devices" />

            <ListView
                android:id="@+id/listView_paired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/textViewMobW"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/btn_draw"
                android:gravity="left|center"
                android:text="@string/new_devices_available" />

            <ListView
                android:id="@+id/listView_newdevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_scan_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/scan_new_device"
        android:textColor="@color/white"
        app:backgroundTint="@color/maroon" />


    <TextView
        style="@style/footerstyleMob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
