<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!-- Login progress -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/tab_ED_size"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <EditText
                    android:id="@+id/email"
                    style="@style/textViewMob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mobmargin2"
                    android:gravity="center"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="textFilter|text|textNoSuggestions"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/password"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/tab_ED_size"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <EditText
                    android:id="@+id/password"
                    style="@style/textViewMob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mobmargin2"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:imeActionLabel="Sign In"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/remember"
                style="@style/textViewMob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/remember_me"
                android:textSize="12dp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/white"
                android:visibility="visible"
                android:layout_gravity="center"
                app:backgroundTint="@color/maroon" />

            <!--<Button
                android:id="@+id/login"
                style="@style/btnStyleMobW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/login"
                android:textStyle="bold" />-->

        </LinearLayout>
    </ScrollView>

    <TextView
        style="@style/footerstyleMob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
